[tool.poetry]
name = "esensisolusibuana"
version = "0.1.0"
description = "Technical Test"
authors = ["Prima"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
robotframework = ">=4.1.3"
robotframework-seleniumlibrary = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
